# window-art

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: examples.md  index.md
docs/api/: animation.md  color.md  core.md  easing.md  grid.md  vec.md  window.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: animation.md  colors.md  easing.md  grid.md  media.md  text.md  windows.md
window_art/: __init__.py  animate.py  color.py  core.py  easing.py  layout.py  vec.py  window.py
window_art/media/: __init__.py  gif.py  text.py  video.py
